# github-to-org

./: .coveragerc  .flake8  .isort.cfg  .pre-commit-config.yaml  README.md  README.rst  example_ghorg.toml  pyproject.toml  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst
src/github_to_org/: __init__.py  _version.py  cfg.py  cli.py  github.py  org.py  priorities.py  schedules.py
tests/: conftest.py
